feat: add PSD/PSB structured import
